# src/main/resources/api.yaml
@@ -366,9 +366,115 @@ paths:
           '404':
             description: Package not found.
 #######################################
-######     Package           ##########
+######     Order           ##########
 #######################################
-
+  /orders:
+    get:
+      tags:
+        - Orders
+      summary: Get all orders
+      operationId: getAllOrders
+      description: Retrieve a list of all orders.
+      responses:
+        '200':
+          description: A list of orders.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/OrderDto'
+    post:
+      tags:
+        - Orders
+      summary: Create a new order
+      operationId: createOrder
+      description: Add a new order
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderDto'
+      responses:
+        '201':
+          description: Order created successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDto'
+  /orders/{id}:
+    get:
+      tags:
+        - Orders
+      summary: Get an order by ID
+      operationId: getOrderById
+      description: Retrieve details of a specific order by its ID.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the order.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Order details retrieved successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDto'
+        '404':
+          description: Order not found.
+    put:
+      tags:
+        - Orders
+      summary: Update an order
+      operationId: updateOrder
+      description: Update details of an existing order.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the order to update.
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/OrderDto'
+      responses:
+        '200':
+          description: Order updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OrderDto'
+        '404':
+          description: Order not found.
+    delete:
+      tags:
+        - Orders
+      summary: Delete an order
+      operationId: deleteOrder
+      description: Remove an order from the catalog.
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: The ID of the order to delete.
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '204':
+          description: Order deleted successfully.
+        '404':
+          description: Order not found.
 components:
   schemas:
     UserDto:
@@ -464,3 +570,22 @@ components:
         - receiver
         - status
         - deliveryDate
+    OrderDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: The unique id of order
+        status:
+          type: string
+          description: The order status
+        date:
+          type: string
+          format: date
+          description: The date that order was placed
+      required:
+        - id
+        - status
+        - date
+
